=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================

Version 4.3.0
 - Fixed: [ 3187504 ] Fatal error in Research Assistant (canajun2eh)
 - Changed: Relocate "Prev" and "Next" buttons in Install wizard (canajun2eh)
 - Fixed: [ 3179194 ] Upload GEDCOM fails (canajun2eh)
 - Fixed: [ 3173600 ] Manage Media forgets certain options after media change made (canajun2eh)
 - Fixed: [ 3177042 ] Manage Media, Add link errors when entering ID directly (canajun2eh)
 - Fixed: [ 3174421 ] Error functions_DB.php in fetch_gedcom_record (pathan)
 - Fixed: [ 3171242 ] pedigree_image_xxx styles (canajun2eh)

Version 4.2.4
 - Fixed: [ 3121290 ] Reports: Source list damaged (canajun2eh)
 - Fixed: [ 3119940 ] Reports: "Place" text not needed in front of places (canajun2eh)
 - Fixed: [ 3119928 ] Reports: Cremation is not reported (canajun2eh)
 - Fixed: [ 3119921 ] Reports: Missing pronoun in Descendancy report (canajun2eh)
 - Fixed: [ 3119915 ] Reports: Incorrect Source footnote format (canajun2eh)
 - Fixed: [ 3119907 ] Reports: Not showing Level 2 SOUR sub-records on NAME record (canajun2eh)
 - Fixed: Incorrect URL when using Geonames search in Autocomplete of place names (canajun2eh)
 - Deleted: Keyboard Shortcuts feature (canajun2eh)
 - Changed: New rules for finding highlighted object on charts, Indi, and Family pages (canajun2eh)
 - Fixed: [ 2947598 ] Site Map missing the $SERVER_URLvar? (fisharebest)
 - Changed: Behaviour of autocomplete for INDI fields, input of an id grabs only the exact id and extends by a further digit, makes it much faster for large gedcoms (volschin)
 - Fixed: [ 2945678 ] [6910] Add new child/autocomplete (fisharebest)
 - Update: jQuery 1.4.1 (volschin)
 - Fixed: [ 2938600 ] 4.2.3 indi Map tab: no map & Java error (wooc)