@@ -22,7 +22,6 @@
 	<property name="module-research-assistant.dir" value="${dist.dir}/PGV-Module-research-assistant-${pgv.version}" />
 	<property name="module-sitemap.dir" value="${dist.dir}/PGV-Module-sitemap-${pgv.version}" />
 	<property name="module-slideshow.dir" value="${dist.dir}/PGV-Module-slideshow-${pgv.version}" />
-	<property name="module-wordsearch.dir" value="${dist.dir}/PGV-Module-wordsearch-${pgv.version}" />
 
 	<property name="demo.base.dir" value="${dist.dir}/DemoBase" />
 	<property name="demo.dir" value="${dist.dir}/PGV-Demo-${pgv.version}" />
@@ -106,8 +105,6 @@
 		<delete file="${module-sitemap.dir}.zip" failonerror="false" />
 		<delete dir ="${module-slideshow.dir}" failonerror="false" />
 		<delete file="${module-slideshow.dir}.zip" failonerror="false" />
-		<delete dir ="${module-wordsearch.dir}" failonerror="false" />
-		<delete file="${module-wordsearch.dir}.zip" failonerror="false" />
 	</target>
 
 	<defaultexcludes add="**/*.cache" />
@@ -293,14 +290,6 @@
 		</copy>
 	</target>
 
-	<target name="package-module-wordsearch">
-		<copy todir="${module-wordsearch.dir}">
-			<fileset dir="./modules/">
-				<include name="wordsearch*/**" />
-			</fileset>
-		</copy>
-	</target>
-
 	<target name="package-places">
 		<!-- places -->
 		<copy todir="${places.dir}">
@@ -332,7 +321,7 @@
 	</target>
 
 	<target name="package"
-		depends="package-all, package-basic, package-lang, package-themes, package-modules-all, package-places, package-demo, package-module-cms-interface, package-module-batch-update, package-module-fckeditor, package-module-gallery2, package-module-gedfact-assistant, package-module-googlemap, package-module-jwplayer, package-module-lightbox, package-module-punbb, package-module-research-assistant, package-module-sitemap, package-module-slideshow, package-module-wordsearch">
+		depends="package-all, package-basic, package-lang, package-themes, package-modules-all, package-places, package-demo, package-module-cms-interface, package-module-batch-update, package-module-fckeditor, package-module-gallery2, package-module-gedfact-assistant, package-module-googlemap, package-module-jwplayer, package-module-lightbox, package-module-punbb, package-module-research-assistant, package-module-sitemap, package-module-slideshow">
 		<!--  default target which does everything -->
 	</target>
 	
@@ -356,7 +345,6 @@
 		<zip destfile="${module-research-assistant.dir}.zip" basedir="${module-research-assistant.dir}" update="true" />
 		<zip destfile="${module-sitemap.dir}.zip" basedir="${module-sitemap.dir}" update="true" />
 		<zip destfile="${module-slideshow.dir}.zip" basedir="${module-slideshow.dir}" update="true" />
-		<zip destfile="${module-wordsearch.dir}.zip" basedir="${module-wordsearch.dir}" update="true" />
 		
 	</target>
 </project>
