@@ -1,3 +1,0 @@
-;<?php exit; ?>
-[Module]
-type = PGV_MOD_OO
