@@ -1,38 +1,0 @@
-
-; Width of the puzzle box
-width = 450
-
-; Height of the puzzle box
-height = 400
-
-; Puzzle columns to use
-columns = 20
-
-; Puzzle rows to use
-rows = 23
-
-; Color to use for the loop drawn around selected letters
-loopcolor = #0000FF
-
-; Color to use for the loop drawn around a correct word
-foundcolor = 255,0,0
-
-; Default wordlist to start with, can be any wordlist found in the
-; modules/wordsearch directory or the keyword topsurnames.
-default_wordlist = topsurnames
-
-; How many times a surname should be used before it's added to the list.
-; Use 'default' to use the gedcom configured value.
-top_surnames_number = default
-
-; Size of the letter boxes.
-cellsize = 16
-
-; Font to use
-fontname = TimesRoman
-
-; Font size to use for the letters
-fontsize = 12
-
-; Font style, can be bold, italic or normal
-fontstyle = bold
