@@ -1,2 +1,0 @@
-title = Animals
-wordlist = alligator badger crocodile dolphin eagle frog giraffe hippopotamus jaguar kangaroo leopard monkey opossum penguin rhinoceros skunk tortoise vulture walrus zebra
