@@ -1,2 +1,0 @@
-title = Countries
-wordlist = Australia Brazil Canada Denmark England France Germany Hungary Italy Japan Kenya Mexico Norway Portugal Russia Sweden Taiwan United States Venuzuela Zimbabwe
