@@ -1,2 +1,0 @@
-title = Genealogy
-wordlist = ANCESTOR ANCESTRY ARCHIVES BIBLE BIRTH CEMETERY CENSUS CHART DAUGHTER DEATH DEED DESCENDANT ELLIS EMIGRANT GENEALOGY HERITAGE IMMIGRATION LAND LIBRARY MAPS MAYFLOWER NATURALIZATION ORPHANTRAIN PEDIGREE RECORDS REGISTRY RELATIVE RESEARCH SPOUSE SURNAME TOMBSTONE
