@@ -1,2 +1,0 @@
-title = Units of Measure
-wordlist = acre bushel candela degree feet gallon hertz inch kilometer liter mile newton ohms pound quart second troy ounce volt watt yard
