@@ -1,2 +1,0 @@
-title = One Word Movie Titles
-wordlist = Alien Braveheart Brazil Casablanca Eraser Fargo Ghandi Ghostbusters Harvey Jaws Metropolis Network Patton Platoon Rebecca Sleuth Them Unforgiven Vertigo Witness
