@@ -1,2 +1,0 @@
-title = The Night Sky
-wordlist = Andromeda Aries Betelgeuse Cassiopeia Cygnus Draco Gemini Hydra Libra Moon Milky Way North Star Orion Pegasus Pisces Sirius Tarus Ursa Major Venus Virgo
