@@ -1,2 +1,0 @@
-title = Winter Storms
-wordlist = TEMPERATURE EMERGENCY WINDCHILL BLIZZARD SCARVES MITTENS LAYERS FRIGID SNOW WARM COAT ICE
